--- a/_posts/2023-1-18-ABX.md
+++ b/_posts/2023-1-18-ABX.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Briefly about Android ABX
+title: Read and edit Android Binary XML (ABX) files
 ---
 
 This is a short note about a new file format introduced in Android 12 to store system settings like these ones: 
@@ -75,3 +75,5 @@ For more advanced usage both the parser and serializer have their own specific m
 
 To edit the files on a device there is no need to write our own parser and serializer, we can delegate all the work to the framework. But be careful, there are many flags and conditions for the system to decide to store the files in a different format, or use another version of ABX format. 
 Remember, corrupting system settings files may end up in a bootloop, make sure you can recover your device before editing the settings. 
+
+[Device ID changer](https://github.com/sdex/AndroidIDeditorV2) uses this technique to edit the device ID values. 
