--- a/_posts/2023-1-18-ABX.md
+++ b/_posts/2023-1-18-ABX.md
@@ -76,7 +76,7 @@ For more advanced usage both the parser and serializer have their own specific m
 The AOSP is supplied with a utility `abx.jar` that converts binary XML to human-readable XML and vice versa. It's located at `/system/framework/abx.jar`. It can be called from the shell using the next commands:
 `abx2xml.sh`, `xml2abx.sh`, or even `abx.sh`.
 They all do the same thing and only the order of arguments matters.
-The source code of the utility is located in https://android.googlesource.com/platform/frameworks/base/+/master/cmds/abx/
+The source code of the utility is located in [/platform/frameworks/base/+/master/cmds/abx/](https://android.googlesource.com/platform/frameworks/base/+/master/cmds/abx/).
 
 To edit the files on a device there is no need to write our own parser and serializer, we can delegate all the work to the framework. But be careful, there are many flags and conditions for the system to decide to store the files in a different format, or use another version of ABX format. 
 Remember, corrupting system settings files may end up in a bootloop, make sure you can recover your device before editing the settings. 
