--- a/_posts/2023-1-18-ABX.md
+++ b/_posts/2023-1-18-ABX.md
@@ -1,9 +1,11 @@
 ---
 layout: post
 title: Read and edit Android Binary XML (ABX) files
+categories: [Android,ABX,Root]
 ---
 
-This is a short note about a new file format introduced in Android 12 to store system settings like these ones: 
+In Android 12, a new file format was introduced to store system settings. Previously, the Android OS stored the settings in XML format. It was easy to read and edit them using any text editor (of course with the root permission).
+There are several files that are interesting to us:
 
 ```java
 String SETTINGS_FILE_GLOBAL = "settings_global.xml";
@@ -13,7 +15,7 @@ String SETTINGS_FILE_SSAID = "settings_ssaid.xml";
 String SETTINGS_FILE_CONFIG = "settings_config.xml";
 ```
 
-Previously, the Android OS stored the settings in XML format. It was easy to read and edit them without any additional steps, just using any text editor (of course with root permission). In spite of the extension of the files is still `xml` they are not in XML format: 
+In spite of the extension of the files is still `xml` they are not in XML format: 
 
 ```bash
 sdex@rs:~$ file settings_ssaid.xml 
@@ -27,7 +29,7 @@ sdex@rs:~$ xxd settings_ssaid.xml
 00000050: 616c 7565 0040 4441 3845 4638 3643 3638  alue.@DA8EF86C68
 ```
 
-It's still possible to read the data stored in the file in the hex editor, it's quite inconvenient though. The file starts with `ABX` header and it looks like the data is stored in some binary format. 
+It's still possible to read the data stored in the file in the hex editor, it's quite inconvenient though. The file starts with `ABX` header and it looks like the data is in some binary format. 
 
 A quick search led me to this great post - [Android ABX – Binary XML](https://www.cclsolutionsgroup.com/post/android-abx-binary-xml), definitely check it out if you want to know more about the file format. We will focus on the framework implementation instead. 
 
